maze.lessons.maze.island.IslandMaze.scala.error
Escaper:6: error: illegal start of statement
     ...
     ^