maze.lessons.maze.island.IslandMaze.scala.code
override def run() {
var etat=0;
etat match  {
  case 0 => // courir au nord
     ...
     etat = 1;
  case 1 => // suivre à gauche
     	while (!estFaceMur()){
			avance()
		}
		droite()
		keepHandOnSideWall()
     etat = 0;
  
}
}


def keepHandOnSideWall(){
	do{
		gauche()
		while (estFaceMur()){
			droite()
		}
		avance()
		
	}while(!estSurBiscuit)
	prendBiscuit()
}

